# purr-c

./: .gitignore  LICENSE  README.md  comm.c  compat.c  compat.h  configure  cproc-make  encrypt.c  files.c  formats.c  gemi.c  gemini.c  gemini.h  makefile  meson.build  mmap_file.c  mmap_file.h  pager.c  pager.h  purr.c  purr.h  read_certs.c  read_certs.h  socket.c  test.sh  tests.c  translation.h  urls.c
.github/actions/: Dockerfile  docker.yaml
.github/workflows/: ci.yaml
ci/: run-meson.sh  run.sh
po/: POTFILES  meson.build  pt_BR.po  purr-c.pot
